force-app/main/default/objects/QTB_GenericFuncHandler__e/QTB_GenericFuncHandler__e.object-meta.xml
<CustomObject>
    <description>#-Handle CRUD on objects based on some conditions</description>
    <label>Generic Function Handler</label>
    <pluralLabel>Generic Function Handlers</pluralLabel>
</CustomObject>