force-app/main/default/objects/QTB_GenericFuncHandler__e/fields/QTB_RecordID__c.field-meta.xml
<CustomField>
    <fullName>QTB_RecordID__c</fullName>
    <label>RecordID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>