force-app/main/default/objects/QTB_GenericFuncHandler__e/fields/QTB_RelatedRecordID__c.field-meta.xml
<CustomField>
    <fullName>QTB_RelatedRecordID__c</fullName>
    <label>Related RecordID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>