force-app/main/default/objects/QTB_GenericFuncHandler__e/fields/QTB_Stage__c.field-meta.xml
<CustomField>
    <fullName>QTB_Stage__c</fullName>
    <label>Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>